2024. 7.10. Added dzSysLin. [dz_sys_lin, example]
2024. 7.10. Modified makefile in example to automatically make and remove log directory. [example]
2024. 5.31. Removed test.sh. [test]
2024. 5.31. Changed the license from LGPL-3 to MIT license. [all]
2024. 5.13. Added DEPENDENCY in config.app. [app]
2024. 5.13. Added STD in config.org. [config]
2024. 5.13. Put config.app in app. [app]
2024. 2.23. Modified dzFreqResFromTF to cope with cases where numerator and/or denominator of a transfer function is constant. [dz_tf_fr]
2024. 2.23. Modified dzTFZeroPole to accept cases where numerator and/or denominator of a transfer function is constant. [dz_tf]
2024. 2.23. Modified makefile for example programs to remove *.dat when cleaned. [example]
2024. 2.23. Modified some example programs to output scripts for gnuplot. [example]
2023. 6.21. Separated config and libinfo. [all]
2023. 6. 1. Reflected modification of zeda-makefile-gen to keep dzco_export.h. [dzco_export]
2023. 5.21. Reflected new specification of ZDEF_STRUCT and ZDEF_UNION. [dz_tf, dz_tf_fr, dz_sys, dz_lin]
2023. 5.20. Reflected new specification of zeda-makefile-gen, and modified src/makefile. [src]
2023. 5.16. Replaced __EXPORT to __DZCO_EXPORT. [all]
2023. 5.16. Added dz_misc.h. [dz_misc, dz_tf, dz_sys, dz_ident_lag]
2023. 3.29. Reflected new specification of zArrayClass and zArray2Class. [dz_tf, dz_tf_fr, dz_lin, dz_sys, dz_sys_misc]
2023. 3.29. Modified config.lib and config.tools for C++ compilation. [src, tools]
2023. 3. 3. Modified dz_sys_adder_com, dz_sys_subtr_com, dz_sys_limit_com, dz_sys_fol_com, dz_sys_sol_com, dz_sys_pc_com, dz_sys_adapt_com, dz_sys_p_com, dz_sys_i_com, dz_sys_d_com, dz_sys_pid_com, dz_sys_qpd_com, dz_sys_bw_com, dz_sys_maf_com, dz_sys_tf_com, dz_sys_lin_com with the new definition of __EXPORT. [dz_sys_misc, dz_sys_lag, dz_sys_pid, dz_sys_filt_bw, dz_sys_filt_maf, dz_sys_tf, dz_sys_lin]